--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@ body {
   width: 100%;
   height: 100%;
 }
+body {
+  overflow-x: hidden;
+}
 #crsr {
   height: 2vw;
   width: 2vw;
@@ -107,13 +110,13 @@ body {
 
 #main {
   position: relative;
-  background-color: #000;
+  background-color: #151515;
 }
 
 #page1 {
   height: 100vh;
   width: 100%;
-  background-color: #151515;
+  /* background-color: #151515; */
 }
 
 #page1 #nav {
@@ -129,6 +132,8 @@ body {
   gap: 7vw;
 }
 #ob {
+  /* height: 100px; */
+  width: 55px;
   margin-left: -3vw;
   margin-right: 6vw;
 }
@@ -174,9 +179,155 @@ body {
   font-size: 7.2vw;
   text-transform: uppercase;
   line-height: 7.2vw;
+  border-bottom: 0.7vw solid #fff;
+  padding-bottom: 0.5vw;
+  transition: all ease linear 0.3s;
 }
 .page1-content h2:hover {
   -webkit-text-stroke: 1px #ffff;
+  border-bottom: 0.7vw solid transparent;
   color: transparent;
   font-weight: 500;
+}
+#page2 {
+  height: 100vh;
+  width: 100%;
+  padding-top: 20vh;
+  position: relative;
+}
+#video-container {
+  height: 70vh;
+  width: 71vw;
+  left: 28.3%;
+  position: relative;
+  background-image: url(https://obys.agency/wp-content/uploads/2022/11/Showreel-2022-preview-1.jpg);
+}
+#video-container img {
+  position: absolute;
+  height: 70.5vh;
+  width: 100%;
+  object-fit: cover;
+  top: 0%;
+}
+#video-container video {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+#video-crsr {
+  background-color: #ffa63d;
+  height: 8.5vw;
+  width: 8.5vw;
+  border-radius: 50%;
+  position: absolute;
+  top: 10%;
+  left: 80%;
+  z-index: 999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#video-crsr i {
+  font-size: 2.5vw;
+}
+
+#page3 {
+  min-height: 100vh;
+  width: 100%;
+  background-color: rgb(54, 50, 50);
+  position: relative;
+}
+#page4 {
+  min-height: 100vh;
+  width: 100%;
+  background-color: #151515;
+  position: relative;
+  padding-top: 5vh;
+}
+#page4-content {
+  width: 72vw;
+  margin-left: 28%;
+  position: relative;
+  /* background-color: rgb(248, 53, 53); */
+}
+#page4-content h1 {
+  font-size: 7vw;
+  text-transform: uppercase;
+}
+#page4-content .underLine {
+  height: 1.5px;
+  width: 90%;
+  background-color: #ffffff;
+  margin: 2vw 0;
+}
+#page4-content p {
+  font-size: 2.1vw;
+  width: 45%;
+  font-weight: 500;
+  margin: 2.5vw 0;
+  text-align: left;
+}
+#page4-flex {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 70vw;
+  height: 80vh;
+  gap: 2vw;
+  margin-left: -10.5%;
+}
+#page4-flex img {
+  width: 33vw;
+  height: 80vh;
+  object-fit: cover;
+}
+#page4-flex p {
+  font-size: 1vw;
+  text-align: left;
+  margin-top: -29%;
+  width: 20vw;
+  line-height: 1.5vw;
+}
+#blue-div {
+  width: 33vw;
+  height: fit-content;
+  background-color: #3f7df4;
+  position: relative;
+  margin-top: -24vh;
+  margin-left: 32%;
+  padding: 3vw;
+}
+#blue-div-content {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+
+  width: 100%;
+  border-bottom: 2px solid #b7cefb;
+}
+#blue-div-content h4 {
+  font-size: 1.7vw;
+  font-weight: 100;
+  padding: 2.2vw 0;
+  width: 60%;
+}
+#blue-div-content p {
+  font-size: 1vw;
+  width: 40%;
+}
+#underLine2 {
+  height: 1.5px;
+  width: 90%;
+  background-color: #ffffff;
+ margin-top: 10vw;
+
+}
+#underLine2 p{
+  padding: 2vw 0;
+  font-size:1.2vw ;
+}
+#page5 {
+  min-height: 100vh;
+  width: 100%;
+  background-color: #151515;
 }
