--- a/style.css
+++ b/style.css
@@ -222,7 +222,7 @@ body {
   position: absolute;
   top: 10%;
   left: 80%;
-  z-index: 999;
+  z-index: 99;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -242,7 +242,7 @@ body {
   width: 100%;
   background-color: #151515;
   position: relative;
-  padding-top: 5vh;
+  padding: 7vh 0;
 }
 #page4-content {
   width: 72vw;
@@ -258,7 +258,7 @@ body {
   height: 1.5px;
   width: 90%;
   background-color: #ffffff;
-  margin: 2vw 0;
+  margin: 3vw 0;
 }
 #page4-content p {
   font-size: 2.1vw;
@@ -315,19 +315,76 @@ body {
   font-size: 1vw;
   width: 40%;
 }
-#underLine2 {
-  height: 1.5px;
-  width: 90%;
-  background-color: #ffffff;
- margin-top: 10vw;
+.underLine #pp {
+  font-size: 1.2vw;
+  padding: 1.5vw 0;
+}
 
-}
-#underLine2 p{
-  padding: 2vw 0;
-  font-size:1.2vw ;
-}
 #page5 {
   min-height: 100vh;
   width: 100%;
+  padding: 0vw 0;
   background-color: #151515;
+  position: relative;
+}
+
+.elem {
+  /* background-color: red; */
+  white-space: nowrap;
+  overflow-x: hidden;
+  margin-bottom: -3vw;
+}
+.elem h1 {
+  font-size: 7vw;
+  font-weight: 400;
+  -webkit-text-stroke: 1px #fff;
+  color: transparent;
+  text-transform: uppercase;
+  display: inline-block;
+  margin-right: 10px;
+  animation-name: scroll;
+  animation-duration: 17s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  transition: all ease linear;
+}
+@keyframes scroll {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
+.elem2 {
+  /* background-color: red; */
+  white-space: nowrap;
+  overflow-x: hidden;
+  margin-bottom: -3vw;
+}
+.elem2 h1 {
+  font-size: 7vw;
+  font-weight: 400;
+  -webkit-text-stroke: 1px #fff;
+  color: transparent;
+  text-transform: uppercase;
+  display: inline-block;
+  /* transform: translateX(-100%); */
+  margin-right: 10px;
+  animation-name: scroll;
+  animation-duration: 17s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  transition: all ease linear;
+  animation-direction: reverse;
+}
+.elem span {
+  font-family: "Silk serif";
+
+  color: transparent;
+}
+.elem2 span {
+  font-family: "Silk serif";
+  font-style: italic;
+  color: transparent;
 }
